# iot-server

./: .env.example  .env.test  .gitignore  Makefile  README.md  deploy.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  shell_context.py
.specs/: data-model.md  project-structure.md
.specs/use-cases/: login.md  logout.md
app/: __init__.py  config.py  main.py
app/exceptions/: __init__.py  bad_credentials_exception.py
app/lib/: database.py
app/middlewares/: __init__.py  set_current_user.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  unit_of_work.py  user_repository.py
app/routes/: dashboard.py  index.py
app/routes/auth/: login.py  (+2 more)
app/services/: __init__.py  get_user.py  get_user_by_id.py
migrations/: env.py
migrations/versions/: 0688c0dfca0b_create_user.py
prisma/: schema.prisma
src/: __init__.py  config.py  main.py
src/commands/: __init__.py  send_inbound_message_command.py  send_outbound_message_command.py  upsert_device_command.py
src/queries/: device_stats_query.py  find_device_query.py  list_devices_query.py  process_device_status_query.py
static/js/: dropdown-trigger.js  sidenav-init.js
templates/: _layout.html  _layout_public.html  base.html  dashboard.html  device_detail.html  devices.html  home.html  login.html
templates/components/: navbar.html
templates/partials/: _footer.html  _navbar.html
tests/: conftest.py  test_mqtt_handler.py
tests/commands/: test_upsert_device_command.py
tests/lib/: passwords_test.py
tests/models/: user_test.py
utils/: create_admin_user.py
(+22 files in other folders)
